<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Campus Móvil UG</string>
    <string name="header_title">Bienvenido a Moodle</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="correo_institucional">Correo institucional</string>
    <string name="button_oauth">Ingresar con Google</string>
    <string name="button_login">Validar en Moodle</string>
    <string name="estado_espera">Esperando autenticación...</string>

    <!-- Textos de prueba para las vistas (Tools) -->
    <string name="placeholder_shortname">SIGLAS-101</string>
    <string name="placeholder_coursename">Nombre de la Materia</string>

    <!-- Mensajes del sistema -->
    <string name="error_fetch_courses">Error al obtener los cursos desde Moodle.</string>
    <string name="error_network_connection">Error de conexión de red.</string>
    <string name="cargando">Cargando...</string>
    <string name="moodle_ug">Moodle UG</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="usuario_de_moodle">Usuario de Moodle</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="o">— O —</string>
    <string name="ingresar_con_google">Ingresar con Google</string>

</resources>